Issue 479 - WIP Added back expanding and collapsing of card

--- a/front/assets/style/variables.scss
+++ b/front/assets/style/variables.scss
@@ -3,7 +3,8 @@ $secondary-color: #ffc61e;
 $secondary-gradient: linear-gradient(to left, #ffb92d, #ffdf01);
 $color-muted-grey: #c0b7c5;
 $color-insanely-crazy-light-greyish-purple: #f3f0f4;
-$color-off-white: #efefef;
+$color-off-white: #fafafa;
+$color-dark-off-white: #efefef;
 $welcome-background-color: #aaaaaa99;
 $welcome-background-yellow: #fbe192;
 $welcome-arrow-background: #5b41bb;
